--- a/assets/css/ashi_dsk.css
+++ b/assets/css/ashi_dsk.css
@@ -31,23 +31,31 @@
   color: #fff;
   font-size: 22px;
   font-family: 'mont_regular';
+  opacity: 1;
+}
+#home a:hover{
+  opacity: 0.5;
 }
 
-/*about*/
-#about{
+/*common*/
+#about,
+#business,
+#contact{
   padding: 100px 0 150px;
   text-align: center;
 }
-#about h1{
+#about h1,
+#business h1,
+#contact h1{
   font-family: 'mont_thin';
   font-size: 70px;
 }
-#about .subtitle{
+.subtitle{
   margin: 20px auto;
   letter-spacing: 0.5em;
   color: #2A95E4;
 }
-#about .subtitle:after{
+.subtitle:after{
   content: "";
   display: block;
   width: 50px;
@@ -55,10 +63,12 @@
   margin: 20px auto 50px;
   background: #000;
 }
-#about p{
+p{
   width: 500px;
   margin: 0 auto;
 }
+
+/*about*/
 #about img{
   display: block;
   width: 130px;
@@ -66,7 +76,6 @@
   margin: 50px auto;
   background: #eee;
   border-radius: 50%;
-  overflow: hidden;
 }
 #about section{
 }
@@ -87,4 +96,21 @@
 }
 #about section ul li span{
   color: #7d7d7d;
+}
+
+/*business*/
+#business section{
+  font-size: 0;
+  margin: 50px auto 100px;
+}
+#business section img{
+  display: inline-block;
+  width: 130px;
+  height: 130px;
+  margin-right: 55px;
+  background: #eee;
+  border-radius: 50%;
+}
+#business section img:last-child{
+  margin-right: 0;
 }
