--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -182,20 +182,30 @@ h2 {
   }
 }
 h3 {
+  width: 85%;
   font-size: 1.7rem;
-  margin: 70px 0 50px 0;
+  margin: 70px auto 50px;
 }
 p {
   text-align: left;
   width: 500px;
   margin: 0 auto;
   line-height:2rem;
-  font-size: 1.1rem;
+  font-size: 0.85rem;
 }
 @media screen and (max-width:500px) {
+nav{
+  right: 0;
+}
+nav .logo{
+  width: 80px;
+  height: 80px;
+}
+nav li:first-child img{
+  right: 3px;
+}
   p {
-    margin: 0 5px 0 5px;
-    width: 100%;
+    width: 85%;
   }
 }
 
@@ -205,7 +215,7 @@ section {
 }
 
 article {
-  padding: 150px 0 150px;
+  padding: 100px 0 150px;
   text-align: center;
 }
 
